# droidgfxsim

./: LICENSE  README  README.txt  index.html
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/assets/: data.xml  test.mtl
app/src/main/cpp/: CMakeLists.txt
app/src/main/java/com/android/glappjni/: GLAppJNIActivity.java  GLAppJNILib.java  GLAppJNIView.java
app/src/main/res/values/: strings.xml
gradle/wrapper/: gradle-wrapper.properties
native/: CMakeLists.txt
native/include/android/: LICENSE-2.0
native/include/application/: application.h
native/include/common/: asset_manager.hpp  log.h  rapidxml_print.hpp
native/include/desktop/glad/: glad.h
native/include/graphics/: camera.h  gl2_renderer.h  gl3_renderer.h  gl_code.h  scene_graph.h  wavefront_factory.h
native/include/physics/: simulation.h
native/src/: main.cc
native/src/android/: LICENSE-2.0  glappjni.cc
native/src/application/: application.cc
native/src/desktop/: glad.c
native/src/graphics/: camera.cc  gl2_renderer.cc  gl3_renderer.cc  gl_code.cc  scene_graph.cc  wavefront_factory.cc
native/src/physics/: simulation.cc
